[tool.poetry]
name = "hw_poetry"
version = "0.1.0"
description = ""
authors = ["nicole <nicole.cho44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
